[tool.poetry]
name = "tee-tee"
version = "0.1.0"
description = "Truth table utility"
authors = ["Nick Rushton <rushton.nicholas@gmail.com>"]
license = "Apache 2.0"
packages=[
    {include = "tee-tee"}
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
quine-mccluskey = "^0.3"
mypy = "^0.910"
black = "^21.6b0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
